<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNotificationsActivity">

    <LinearLayout
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/title"/>
        <EditText
            android:id="@+id/noticationtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterTitle"
            android:inputType="text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/noticationdescription"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:inputType="textMultiLine"
            android:hint="@string/enterDescription"
            android:gravity="start"/>
        <Button
            android:id="@+id/addNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/addNotification"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>